# flask_booth

./: AGENTS.md  pubspec.yaml
KHUNG TRƠN TRẮNG/: son tung.html
Photo Booth template/: Flashy Booth - UI Planning.html  Flashy Booth v1.html  Stormick Photo Booth v1.html  Stormick Photo Booth v2.html
Photo Booth template/scraps/: sketch-2026-05-17T14-52-29-3up52r.napkin
android/app/: build.gradle
assets/dummy/: photobooth_info.json
assets/files/: filter.txt
docs/: admin_backend_update_contract.md
docs/superpowers/plans/: 2026-05-19-flashy-booth-ui-refresh.md
edsdk/: README.md  pubspec.yaml
edsdk/lib/: edsdk.dart  edsdk_method_channel.dart  edsdk_platform_interface.dart
edsdk/lib/models/: camera_model.dart  xfile.dart
edsdk/windows/: CMakeLists.txt  edsdk_outlet.cpp  edsdk_outlet.h  edsdk_plugin.cpp  edsdk_plugin.h  edsdk_plugin_c_api.cpp  flutter_edsdk.cpp  flutter_edsdk.h
edsdk/windows/include/edsdk/: edsdk_plugin_c_api.h
edsdk/windows/models/: camera_model.cpp  xfile.cpp
edsdk/windows/utils/: object_utils.cpp
ffmpeg_helper/: .flutter-plugins-dependencies  pubspec.yaml
ffmpeg_helper/lib/: ffmpeg_helper.dart
ffmpeg_helper/lib/extensions/: statistics_extension.dart
ffmpeg_helper/lib/ffmpeg/: ffmpeg_command.dart
ffmpeg_helper/lib/helpers/: ffmpeg_helper_class.dart  helper_sessions.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/common/constants/: config_constant.dart  device_constants.dart  failure.dart  filters.dart  injectable_constants.dart  network_constants.dart  printer_constants.dart  printer_method_channel_constants.dart  remote.dart
lib/common/enums/: filter_enum.dart  orientation_enum.dart  printer_cut_mode.dart  printer_job_action.dart  printer_job_status.dart  printer_paper_size.dart
lib/common/extensions/: size_extension.dart  widget_extensions.dart
lib/common/log/: log_config.dart  log_interceptor_mixin.dart  log_mixin.dart  log_utils.dart  logs_constants.dart
lib/common/models/: app_theme_config.dart  effect.dart  effect.freezed.dart  effect.g.dart  image_param.dart  image_param.freezed.dart  matrix_param.dart  matrix_param.freezed.dart  preset.dart  preset.freezed.dart  preset.g.dart  printer_job.dart  printer_job.freezed.dart
lib/common/navigator/: app_route_observer.dart  (+2 more)
lib/config/: injetable_config.config.dart  injetable_config.dart
lib/resources/: app_colors.dart  app_text_style.dart  app_theme_data.dart  app_theme_palette.dart  flashy_booth_theme.dart
linux/: my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
shaders/: filters.frag
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h
(+105 files in other folders)
